--- a/style.css
+++ b/style.css
@@ -8,17 +8,36 @@ a{text-decoration: none;}
 hr{border:none; border-bottom: 1px solid #ddd}
 
 
-/* ! Custom Font */
-@font-face {
-    font-family: 'FontPompieri';
-    src: url('fonts/Tisa_font/TisaOT-Ita.otf') format('TisaIt'),
-         url('fonts/Tisa_font/TisaOT-Bold.otf') format('TisaBold');
-    font-weight: normal;
-    font-style: normal;
+/* ! Stesso font di pompieri.ch*/
+.pt-serif-regular {
+  font-family: "PT Serif", serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
+.pt-serif-bold {
+  font-family: "PT Serif", serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.pt-serif-regular-italic {
+  font-family: "PT Serif", serif;
+  font-weight: 400;
+  font-style: italic;
+}
+
+.pt-serif-bold-italic {
+  font-family: "PT Serif", serif;
+  font-weight: 700;
+  font-style: italic;
+}
+
+
 body {
-    font-family: 'TisaIt', sans-serif;
+  font-family: "PT Serif", serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 
@@ -95,18 +114,6 @@ h1, h2, h3, h4, p, ol, ul{margin-bottom: 1rem;}
 .header__icons{width: 10%; display: flex; justify-content: flex-end;align-items: center;}
 
 
-
-
-
-
-/* ! Header */
-/* .header{background: #AF001E; display: flex; justify-content: center;position: fixed;width: 100%;top:0;left:0;z-index: 99999;}
-.header a{color:#fff; display: block; padding: 15px;}
-
-.header__menu{margin-bottom: 0;}
-.header__menu li{display: inline-block;}
-.header__logo{font-weight: bold;}
- */
 
 
 
