--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ h1, h2, h3, h4, p, ol, ul{margin-bottom: 1rem;}
 
 .header__menu{margin-bottom: 0;width: 100%;text-align: center;display: flex; align-items: center; justify-content: center;}
 .header__menu li{display: inline-block;}
-.header__menu li a{color:#fff; display: block; padding: 15px;font-size: 0.9rem;color:#eee}
+.header__menu li a{color:#fff; display: block; padding: 10px;font-size: 0.9rem;color:#eee}
 .header__menu li a:hover{background: #fff; color:#AF001E;}
 .header__logo{font-weight: bold;width: 10%; padding-left: 10px;display: flex; align-items: center; color:#fff}
 
@@ -119,7 +119,7 @@ h1, h2, h3, h4, p, ol, ul{margin-bottom: 1rem;}
 
 /* ! Cover */
 .cover{
-  background: #AF001E; padding:20px; min-height:100vh;
+  background: #AF001E; padding:20px; min-height:1200px;
   display:flex; flex-flow: column;
   justify-content: center;
   align-items: center;
