--- a/style.css
+++ b/style.css
@@ -35,7 +35,8 @@ hr{border:none; border-bottom: 1px solid #ddd}
 
 
 body {
-  font-family: "PT Serif", serif;
+  /* font-family: "PT Serif", serif; */
+  font-family: "Montserrat", sans-serif;
   font-weight: 400;
   font-style: normal;
 }
