--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ h3, .text-3{font-size: 2.2rem;}
 h4, p, .text-4{font-size: 1.8rem;}
 
 h1, h2, h3, h4, p, ol, ul{margin-bottom: 1rem;}
-
+.text-mini{font-size: 0.96rem}
 @media (max-width: 768px) {
   .text-0{font-size: 4rem}
   .text-2{font-size: 1.8rem;}
@@ -198,6 +198,7 @@ h1, h2, h3, h4, p, ol, ul{margin-bottom: 1rem;}
 .sez__h50{min-height: 50vh;}
 .sez__h25{min-height: 25vh;}
 .sez__h75{min-height: 75vh;}
+.sez__h40{min-height: 40vh;}
 
 
 
